--- a/menu.html
+++ b/menu.html
@@ -9,13 +9,22 @@
 </head>
 <body>
     <!-- Create a div with position relative and with a img content and the image ocuppies the entire screen  -->
-    <div id="container">
-        <img style="width: 100%;height: 100%; position: absolute;" src="https://source.unsplash.com/xg8z_KhSorQ" alt="Viajar">
-        <p style="position: absolute; padding-top: 20px;padding-left: 20px;font-size: large; color: white;">
-            Viajar pelo mundo é uma das melhores coisas que podemos fazer. É uma experiência única e que nos faz crescer como pessoas.
-        </p>   
-        <!-- Button with href to another page in the center of the container -->
-        <a href="capitals.html">Clique aqui para ver mais</a>
+    <div id="container-menu">
+        <div id="background"></div>
+        <div class="box">
+            <p style="font-size: 300%;">Welcome to my Lab3!</p>
+            <nav>
+                <a href="capitals.html">Capitais</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+                <a href="">Exemplo</a>
+            </nav>
+        </div>
     </div>
 </body>
 </html>
