--- a/capitals.html
+++ b/capitals.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="capitais.css">
     <title>Capitais</title>
 </head>
 <body>
+    <!-- Make background-tables ocuppie the interface-->
+    <div id="background-tables">
     <h1>Capitais Europeias</h1>
     <div id="container">
     <div id="container-flex" class="capitais">
@@ -55,6 +57,7 @@
             <img src="/images/roma.avif" alt="">
             <div>Roma</div>
         </div>    
+    </div>
     </div>
     </div>
 </body>
