--- a/menu.html
+++ b/menu.html
@@ -14,15 +14,17 @@
         <div class="box">
             <p style="font-size: 300%;">Welcome to my Lab3!</p>
             <nav>
-                <a href="capitals.html">Capitais</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
-                <a href="">Exemplo</a>
+                <a href="1.1.html">1.1</a>
+                <a href="1.2.html">1.2</a>
+                <a href="1.3.html">1.3</a>
+                <a href="1.4.html">1.4</a>
+                <a href="1.5.html">1.5</a>
+                <a href="2.1.html">2.1</a>
+                <a href="2.2.html">2.2</a>
+                <a href="2.3.html">2.3</a>
+                <a href="2.4.html">2.4</a>
+                <a href="2.5.html">2.5</a>
+                <a href="2.6.html">2.6</a>
             </nav>
         </div>
     </div>
